2000-08-08  Jeremy Wise  <jwise@pathwaynet.com>
	* mail-config.[ch], folder-browser.c: Added configuration work to
	save the size of the vpaned widget.  It will be functional when the
	e_paned widget emits a "resized" widget

2000-08-08  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-config.h: Added void as an argument to functions not
	needing any parameters to avoid compile warnings.

2000-08-08  Jeremy Wise  <jwise@pathwaynet.com>
	* mail-config.[ch], main.c, folder-browser-factory.c: State of the
	threaded list toggle is now saved via gnome_config

2000-08-08  Dan Winship  <danw@helixcode.com>

	* mail-config-gui.c (service_page_item_new): Attach a signal
	handler to call the "changed" function when the user clicks the
	"keep on server" checkbox.
	
2000-08-08  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-ops.c (view_msg): New convenience function with params of a
	normal Gtk callback function. We also now create a new
	FolderBrowser object so that the message-view window isn't tied to
	the display in the main window
	(view_message): Now calls view_msg (this function is a bonobo
	callback and can't be used with gtk widgets)
	(edit_msg): Same idea as view_msg()
	(edit_message): Again, same as view_message()

	* message-list.c (on_right_click): Callback for creating an
	e-popup-menu
	(message_list_init): Added a right_click event to trigger a pop-up
	menu to be displayed

2000-08-08  Dan Winship  <danw@helixcode.com>

	* mail-config-gui.c: Add "Don't delete messages from server"
	button to remote SOURCEs that aren't STORAGEs (ie, POP).
	(provider_list): Only list SOURCEs. (ie, not mh)

	* mail-config.c: Save/load "keep_on_server" flag.

	* mail-ops.c (fetch_remote_mail): New function, split out of
	real_fetch_mail. Deals with copying mail from a remote server into
	a temporary mbox, possibly using a CamelUIDCache to leave the
	messages on the server.

	* mail-crypto.c, mail-format.c, message-thread.c: Fix some
	compiler warnings.
