@@ -1,7 +1,14 @@
+2000-08-09  Jeffrey Stedfast  <fejj@helixcode.com>
+
+	* message-list.c (message_list_init): Attached a double_click
+	signal handler
+	(on_double_click): Our lovely new double_click callback. Will
+	display the current selected message in a new window
+
 2000-08-08  Jeremy Wise  <jwise@pathwaynet.com>
 	* mail-config.[ch], folder-browser.c: Added configuration work to
 	save the size of the vpaned widget.  It will be functional when the
-	e_paned widget emits a "resized" widget
+	e_paned widget emits a "resized" signal
 
 2000-08-08  Jeffrey Stedfast  <fejj@helixcode.com>
 
